@@ -5,6 +5,8 @@ New features:
 
 * Option to automatically snap existing nodes to grid
 
+* Option for dashed lines in the edge context menu
+
 Bug fixes:
 
 * Fix GitHub Issue #186: Icon is installed in /usr/share/icons/hicolor/64x64 but actual size is 256x256
